--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -231,10 +231,10 @@ jobs:
             http_code=$(curl -LI $HOST -f -o /dev/null -w '%{http_code}\n' -s)
 
             if [ ${http_code}  -eq 200 ]; then
-              echo "${http_code} is reachable"
+              echo "${HOST} is reachable"
               exit 0
             else 
-              echo "application not reachable"
+              echo "${HOST} is not reachable !!!!!"
               exit 1
             fi
               
@@ -246,10 +246,10 @@ workflows:
   defaults:
     jobs:
       - build_and_upload_docker
-      #- create_infrastructure
+      - create_infrastructure
       - deploy_infra:
           requires:
-            #- create_infrastructure
+            - create_infrastructure
             - build_and_upload_docker
      
 #echo "export NASA_API_KEY=$API_KEY"  >> ~/.bashrc
