--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -229,14 +229,15 @@ jobs:
 
             kubectl get service 
             http_code=$(curl -LI ${HOST} -f -o /dev/null -w '%{http_code}\n' -s)
+            echo "${HOST}"
 
-            if [ ${http_code}  -eq 200 ]; then
-              echo "${HOST} is reachable"
-              exit 0
-            else 
-              echo "${HOST} is not reachable !!!!!"
-              exit 1
-            fi
+          #  if [ ${http_code}  -eq 200 ]; then
+          #    echo "${HOST} is reachable"
+          #    exit 0
+          #  else 
+          #    echo "${HOST} is not reachable !!!!!"
+          #    exit 1
+          #  fi
               
           #  curl $HOST -f 
           # printf "  $i \r"
