--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -227,10 +227,10 @@ jobs:
             echo "http request sent to..."
             echo "${HOST}"
 
-            kubectl get service 
             http_code=$(curl -LI ${HOST} -f -o /dev/null -w '%{http_code}\n' -s)
-            echo "cURL response code ${HOST}"
+            echo "cURL response code ${http_code}"
 
+            kubectl get service
           #  if [ ${http_code}  -eq 200 ]; then
           #    echo "${HOST} is reachable"
           #    exit 0
